gcc/algol60/testsuite/fail/array2.a60
'begin'
 'integer' 'array' a[];
'end';
